hassdb/hassdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hassdb
  labels:
    app: hassdb
spec:
  selector:
    app: hassdb
  ports:
  - port: 3306
    targetPort: 3306
