hassdb/hassdb_adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hassdb-adminer
  labels:
    app: hassdb-adminer
spec:
  selector:
    app: hassdb
  ports:
  - port: 8080
    targetPort: 8080
