hassdb/hassdb_adminer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hassdb_adminer
spec:
  rules:
  - host: hassdb.xip.io
    http:
      paths:
      - backend:
          serviceName: hassdb_adminer
          servicePort: 8080
